...
              'You have pushed the button this many times:',
            ),
            Text(
              '$_counter',
              style: Theme.of(context).textTheme.headline4,
            ),
            TextButton(onPressed: _goSecond, child: const Text('GoSecond')),
            IconButton(
              onPressed: _incrementCounter2,
              icon: const Icon(Icons.update),
              tooltip: 'plus_two',
            )
          ],
...
