appId: com.example.maestroTest
---
- launchApp
- tapOn: "GoSecond"
- tapOn: "GoThird"
- scroll
- assertVisible: "! - 20"
- swipe:
    direction: UP